use ziti_address model when processing configs

--- a/lib/ziti-tunnel/CMakeLists.txt
+++ b/lib/ziti-tunnel/CMakeLists.txt
@@ -50,6 +50,7 @@ target_include_directories(${lwip_sys_lib}
         )
 
 target_link_libraries(ziti-tunnel-sdk-c
+        PUBLIC ziti
         PUBLIC ${lwip_sys_lib}
         PUBLIC lwipcore
         PUBLIC uv_a
