also build a package for ubuntu jammy 22.04 LTS

--- a/.github/workflows/cpack.yml
+++ b/.github/workflows/cpack.yml
@@ -16,6 +16,9 @@ jobs:
         arch: [ x86_64 ] # TODO: migrate the Linux builds for arm, arm64 too
         distro:
           - name: ubuntu
+            version: "22.04"
+            type: deb
+          - name: ubuntu
             version: "20.04"
             type: deb
           - name: ubuntu
